--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "author": "Tal Ater <tal@talater.com>",
   "dependencies": {
+    "@octokit/rest": "^14.0.9",
     "commander": "^2.14.1",
     "update-notifier": "^2.3.0"
   },
